[gd_scene load_steps=2 format=2]

[ext_resource path="res://ExampleScenes/Chapter_04_ParticleSystems/Exercise_4_6_Shatter/Example_4_6.gd" type="Script" id=1]


[node name="Node2D" type="Node2D"]

[node name="ShatterArea" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShatterArea"]

[node name="ShatterArea2" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShatterArea2"]

[node name="ShatterArea3" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShatterArea3"]

[node name="ShatterArea4" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShatterArea4"]

[node name="ShatterArea5" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShatterArea5"]

[node name="ShatterArea6" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShatterArea6"]
[connection signal="input_event" from="ShatterArea" to="ShatterArea" method="_on_ShatterArea_input_event"]
[connection signal="mouse_entered" from="ShatterArea" to="ShatterArea" method="_on_ShatterArea_mouse_entered"]
[connection signal="mouse_exited" from="ShatterArea" to="ShatterArea" method="_on_ShatterArea_mouse_exited"]
[connection signal="input_event" from="ShatterArea2" to="ShatterArea2" method="_on_ShatterArea_input_event"]
[connection signal="mouse_entered" from="ShatterArea2" to="ShatterArea2" method="_on_ShatterArea_mouse_entered"]
[connection signal="mouse_exited" from="ShatterArea2" to="ShatterArea2" method="_on_ShatterArea_mouse_exited"]
[connection signal="input_event" from="ShatterArea3" to="ShatterArea3" method="_on_ShatterArea_input_event"]
[connection signal="mouse_entered" from="ShatterArea3" to="ShatterArea3" method="_on_ShatterArea_mouse_entered"]
[connection signal="mouse_exited" from="ShatterArea3" to="ShatterArea3" method="_on_ShatterArea_mouse_exited"]
[connection signal="input_event" from="ShatterArea4" to="ShatterArea4" method="_on_ShatterArea_input_event"]
[connection signal="mouse_entered" from="ShatterArea4" to="ShatterArea4" method="_on_ShatterArea_mouse_entered"]
[connection signal="mouse_exited" from="ShatterArea4" to="ShatterArea4" method="_on_ShatterArea_mouse_exited"]
[connection signal="input_event" from="ShatterArea5" to="ShatterArea5" method="_on_ShatterArea_input_event"]
[connection signal="mouse_entered" from="ShatterArea5" to="ShatterArea5" method="_on_ShatterArea_mouse_entered"]
[connection signal="mouse_exited" from="ShatterArea5" to="ShatterArea5" method="_on_ShatterArea_mouse_exited"]
[connection signal="input_event" from="ShatterArea6" to="ShatterArea6" method="_on_ShatterArea_input_event"]
[connection signal="mouse_entered" from="ShatterArea6" to="ShatterArea6" method="_on_ShatterArea_mouse_entered"]
[connection signal="mouse_exited" from="ShatterArea6" to="ShatterArea6" method="_on_ShatterArea_mouse_exited"]
